--- a/src/main/resources/META-INF/resources/templates/screens/XDATScreen_edit_template_sample.vm
+++ b/src/main/resources/META-INF/resources/templates/screens/XDATScreen_edit_template_sample.vm
@@ -1,5 +1,5 @@
 #*																			*#
-#* xnat-template-plugin: XDATScreen_edit_template_sample.vm					*#
+#* xnat-template1-plugin: XDATScreen_edit_template1_sample.vm					*#
 #* XNAT https://www.xnat.org												*#
 #* Copyright (c) 2005-2021, Washington University School of Medicine       	*#
 #* All Rights Reserved														*#
@@ -10,15 +10,15 @@
 #* @vtlvariable name="edit_screen" type="java.lang.String" *#
 #* @vtlvariable name="item" type="org.nrg.xft.XFTItem" *#
 #* @vtlvariable name="label" type="java.lang.String" *#
-#* @vtlvariable name="link" type="org.apache.turbine.services.pull.tools.TemplateLink" *#
-#* @vtlvariable name="om" type="org.nrg.xdat.om.TemplateSample" *#
-#* @vtlvariable name="page" type="org.apache.turbine.util.template.HtmlPageAttributes" *#
+#* @vtlvariable name="link" type="org.apache.turbine.services.pull.tools.Template1Link" *#
+#* @vtlvariable name="om" type="org.nrg.xdat.om.Template1Sample" *#
+#* @vtlvariable name="page" type="org.apache.turbine.util.template1.HtmlPageAttributes" *#
 #* @vtlvariable name="project" type="java.lang.String" *#
 #* @vtlvariable name="subjectId" type="java.lang.String" *#
 #* @vtlvariable name="turbineUtils" type="org.nrg.xdat.turbine.utils.TurbineUtils" *#
 #* @vtlvariable name="ui" type="org.apache.turbine.services.pull.util.UIManager" *#
 #* @vtlvariable name="vr" type="org.nrg.xft.utils.ValidationUtils.ValidationResults" *#
-<!-- BEGIN META-INF/resources/templates/screens/XDATScreen_edit_template_sample.vm -->
+<!-- BEGIN META-INF/resources/template1s/screens/XDATScreen_edit_template1_sample.vm -->
 $page.setTitle("Sample")
 $page.setLinkColor($ui.alink)
 $page.setVlinkColor($ui.vlink)
@@ -41,16 +41,16 @@ $page.setVlinkColor($ui.vlink)
 <div class="error">$data.message</div>
 #end
 <div id="sampleFormDiv">
-    <form ID="sampleForm" name="sampleForm" method="post" action="$link.setAction("ModifyTemplateSample")">
+    <form ID="sampleForm" name="sampleForm" method="post" action="$link.setAction("ModifyTemplate1Sample")">
         <input type="hidden" name="project" value="$!project">
         <input type="hidden" name="part_id" value="$!subjectId">
-        <input type='hidden' name='template:sample/ID' value='$!om.id'/>
-        <input type="hidden" name="template:sample/project" value='$!project'/>
-        <input type='hidden' name='template:sample/subject_ID' value='$!subjectId'/>
-        <input type='hidden' name='template:sample/label' value='$!label'/>
-        <input type="hidden" name="template:sample.date.month" id="template:sample.date.month" value=""/>
-        <input type="hidden" name="template:sample.date.date" id="template:sample.date.date" value=""/>
-        <input type="hidden" name="template:sample.date.year" id="template:sample.date.year" value=""/>
+        <input type='hidden' name='template1:sample/ID' value='$!om.id'/>
+        <input type="hidden" name="template1:sample/project" value='$!project'/>
+        <input type='hidden' name='template1:sample/subject_ID' value='$!subjectId'/>
+        <input type='hidden' name='template1:sample/label' value='$!label'/>
+        <input type="hidden" name="template1:sample.date.month" id="template1:sample.date.month" value=""/>
+        <input type="hidden" name="template1:sample.date.date" id="template1:sample.date.date" value=""/>
+        <input type="hidden" name="template1:sample.date.year" id="template1:sample.date.year" value=""/>
 
         #if($vr)
             <div class="error">Invalid parameters:<BR>$vr.toHTML()</div>
@@ -87,7 +87,7 @@ $page.setVlinkColor($ui.vlink)
                                             Did the subject $subjectId consent to join the study?
                                         </td>
                                         <td>
-                                            #xdatBooleanRadioYesNoWithoutDefault("template:sample/consented" $item $vr)
+                                            #xdatBooleanRadioYesNoWithoutDefault("template1:sample/consented" $item $vr)
                                         </td>
                                     </tr>
                                 </table>
@@ -113,11 +113,11 @@ $page.setVlinkColor($ui.vlink)
 <script type="text/javascript">
     function validateForm() {
         const today = new Date();
-        document.getElementById('template:sample.date.month').value = today.getMonth();
-        document.getElementById('template:sample.date.date').value = today.getDate();
-        document.getElementById('template:sample.date.year').value = today.getFullYear();
+        document.getElementById('template1:sample.date.month').value = today.getMonth();
+        document.getElementById('template1:sample.date.date').value = today.getDate();
+        document.getElementById('template1:sample.date.year').value = today.getFullYear();
         document.sampleForm.submit();
         return true;
     }
 </script>
-<!-- END META-INF/resources/templates/screens/XDATScreen_edit_template_sample.vm -->
+<!-- END META-INF/resources/template1s/screens/XDATScreen_edit_template1_sample.vm -->
